--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+    <section>
     <div class="container">
         <div class="item item1">item 1</div>
         <div class="item item2">item 2</div>
@@ -16,6 +17,7 @@
         <div class="item item6">item 6</div>
         <div class="item item7">item 7</div>
         <div class="item item8">item 8</div>
+        </section>
     </div>
 </body>
 </html>
